2021-06-24  Chris Dumez  <cdumez@apple.com>

        (r279211) introduced 4 failing web-platform-tests
        https://bugs.webkit.org/show_bug.cgi?id=227355
        <rdar://problem/79728204>

        Unreviewed, rebaseline a few WPT url tests after resync in r279211.

        * web-platform-tests/url/url-constructor.any-expected.txt:
        * web-platform-tests/url/url-constructor.any.worker-expected.txt:
        * web-platform-tests/url/url-origin.any-expected.txt:
        * web-platform-tests/url/url-origin.any.worker-expected.txt:

2021-06-24  Chris Dumez  <cdumez@apple.com>

        Resync websockets WPT tests from upstream
        https://bugs.webkit.org/show_bug.cgi?id=227317

        Reviewed by Alex Christensen.

        Resync websockets WPT tests from upstream a38612f39e7752c3532080c.

        * web-platform-tests/websockets/*: Updated.

2021-06-24  Chris Dumez  <cdumez@apple.com>

        Resync custom-elements WPT tests from upstream
        https://bugs.webkit.org/show_bug.cgi?id=227330

        Reviewed by Alex Christensen.

        Resync custom-elements WPT tests from upstream a38612f39e7752c353.

        * web-platform-tests/custom-elements/*: Updated.

2021-06-24  Chris Dumez  <cdumez@apple.com>

        Resync WebIDL WPT tests from upstream
        https://bugs.webkit.org/show_bug.cgi?id=227322

        Reviewed by Alex Christensen.

        Resync WebIDL WPT tests from upstream a38612f39e7752c353.

        * web-platform-tests/WebIDL/*: Updated.

2021-06-24  Chris Dumez  <cdumez@apple.com>

        Resync shadow-dom WPT tests from upstream
        https://bugs.webkit.org/show_bug.cgi?id=227331

        Reviewed by Alex Christensen.

        Resync shadow-dom WPT tests from upstream a38612f39e7752c353.

        * web-platform-tests/shadow-dom/*: Updated.

2021-06-24  Chris Dumez  <cdumez@apple.com>

        Resync beacon WPT tests from upstream
        https://bugs.webkit.org/show_bug.cgi?id=227323

        Reviewed by Alex Christensen.
