@@ -1,2 +1,4 @@
 These are the Server-sent events (`EventSource`) tests for the
 [Server-sent events chapter of the HTML Standard](https://html.spec.whatwg.org/multipage/comms.html#server-sent-events).
+
+IDL tests are part of the `/html/dom/idlharness.*` resources.
