@@ -1,0 +1,3 @@
+
+PASS Passing empty string to the EventSource constructor
+
