@@ -1,0 +1,3 @@
+
+PASS EventSource constructor with an empty url.
+
