@@ -1,5 +1,16 @@
 2021-06-24  Chris Dumez  <cdumez@apple.com>
 
+        Resync eventsource WPT tests from upstream
+        https://bugs.webkit.org/show_bug.cgi?id=227324
+
+        Reviewed by Alex Christensen.
+
+        Resync eventsource WPT tests from upstream a38612f39e7752c353.
+
+        * web-platform-tests/eventsource/*: Updated.
+
+2021-06-24  Chris Dumez  <cdumez@apple.com>
+
         (r279211) introduced 4 failing web-platform-tests
         https://bugs.webkit.org/show_bug.cgi?id=227355
         <rdar://problem/79728204>
